--- a/Web/lampada.html
+++ b/Web/lampada.html
@@ -14,6 +14,8 @@
     </div>
     <div id="light-bulb" class="off ui-draggable" ><div id="light-bulb2" style="opacity: 0; "></div></div>
     </body>
+
+
 </html>
 
 <style>
@@ -152,3 +154,66 @@ z-index: 800;
     }
 });
 </script>
+
+<!-- <script src="client_mqtt.js" type="text/javascript"></script> -->
+
+
+<!-- 
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/components/core-min.js" type="text/javascript"></script> 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/components/hmac-min.js" type="text/javascript"></script> 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.2/components/sha256-min.js" type="text/javascript"></script> 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js" type="text/javascript"></script> 
+
+<script type="text/javascript">
+    // gets MQTT client 
+function initClient() {    
+    const clientId = Math.random().toString(36).substring(7); 
+    const _client = new Paho.MQTT.Client(getEndpoint(), clientId);
+ 
+    // publish method added to simplify messaging 
+    _client.publish = function(topic, payload) { 
+        let payloadText = JSON.stringify(payload); 
+        let message = new Paho.MQTT.Message(payloadText); 
+        message.destinationName = topic; 
+        message.qos = 0; 
+        _client.send(message); 
+    } 
+    return _client; 
+} 
+
+function getEndpoint() { 
+// WARNING!!! It is not recommended to expose 
+// sensitive credential information in code. 
+// Consider setting the following AWS values 
+// from a secure source. 
+
+    // example: us-east-1 
+    const REGION = "us-east-1";   
+
+    // example: blahblahblah-ats.iot.your-region.amazonaws.com 
+    const IOT_ENDPOINT = "a3b300y0i6kc5u-ats.iot.us-east-1.amazonaws.com";  
+
+    // sua AWS chave de acesso
+    const KEY_ID = "faebd263ac-private.pem.key"; 
+
+    // your AWS secret access key 
+    const SECRET_KEY = "faebd263ac-certificate.pem.crt"; 
+
+    // date & time 
+    const dt = (new Date()).toISOString().replace(/[^0-9]/g, ""); 
+    const ymd = dt.slice(0,8); 
+    const fdt = `${ymd}T${dt.slice(8,14)}Z` 
+    
+  const scope = `${ymd}/${REGION}/iotdevicegateway/aws4_request`; 
+    const ks = encodeURIComponent(`${KEY_ID}/${scope}`); 
+    let qs = `X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Credential=${ks}&X-Amz-Date=${fdt}&X-Amz-SignedHeaders=host`; 
+    const req = `GET\n/mqtt\n${qs}\nhost:${IOT_ENDPOINT}\n\nhost\n${p4.sha256('')}`; 
+    qs += '&X-Amz-Signature=' + p4.sign( 
+        p4.getSignatureKey( SECRET_KEY, ymd, REGION, 'iotdevicegateway'), 
+        `AWS4-HMAC-SHA256\n${fdt}\n${scope}\n${p4.sha256(req)}`
+    ); 
+    return `wss://${IOT_ENDPOINT}/mqtt?${qs}`; 
+}  
+    
+</script> -->
